# droid-maxxing

./: .dependency-cruiser.cjs  .env.example  .gitignore  .jscpd.json  .prettierignore  AGENTS.md  FRONTEND_SPEC.md  README.md  eslint.config.js  index.html  knip.json  node_modules  package-lock.json  package.json  playwright.config.ts  renovate.json  tailwind.config.js  tsconfig.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  security-review.yml
docs/: architecture.md  auto-compaction-runtime.md  deployment-observability.md  runbooks.md
electron/: dev.cjs  files.cjs  files.test.cjs  git.cjs  github.cjs  main.cjs  nativeBrowserPreload.cjs  preload.cjs  terminal.cjs  terminal.test.cjs
electron/assets/: icon.icns
sidecar/: knip.json  node_modules  package-lock.json  package.json  tsconfig.json  tsconfig.strict.json
sidecar/src/: CliInstaller.test.ts  CliInstaller.ts  DroidCliCatalog.ts  DroidRuntime.test.ts  DroidRuntime.ts  DroidTransport.test.ts  DroidTransport.ts  Environment.test.ts  Environment.ts  MissionManager.test.ts  MissionManager.ts  autoCompaction.test.ts  autoCompaction.ts  autoCompactionWatchdog.test.ts  autoCompactionWatchdog.ts  compaction.test.ts  compaction.ts  compactionBoundary.test.ts  compactionBoundary.ts  (+24 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  native_browser.rs
tools/: check-agents-md.mjs  check-file-size.mjs  check-tech-debt.mjs  generate-docs.mjs  run-flaky-check.mjs  security-audit-report.mjs
(+209 files in other folders)
